fix alignment of action in summary table

--- a/mettle/static/css/mettle.css
+++ b/mettle/static/css/mettle.css
@@ -447,7 +447,7 @@ keyframes fadesomefails {
 
 /* REUSABLE COMPONENTS */
 
-.entity-table .action {
+.summary .action, .entity-table .action {
   float: right;
   text-align: right;
 }
